[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Control.gd" type="Script" id=1]
[ext_resource path="res://sudoku_board.png" type="Texture" id=2]
[ext_resource path="res://Fonts/ArchitectsDaughter-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/bahnschrift.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.537255, 0.0235294, 0.0235294, 1 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0235294, 0.576471, 0.0235294, 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.537255, 0.0235294, 0.0235294, 1 )

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0235294, 0.576471, 0.0235294, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 37
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 24
font_data = ExtResource( 3 )

[node name="Game" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 0.793701
margin_right = 1024.0
margin_bottom = 600.794
color = Color( 0.168627, 0.168627, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="board" type="TextureRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -236.0
margin_right = 236.0
margin_bottom = 236.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indicator_rect_column" type="ColorRect" parent="ColorRect/board"]
modulate = Color( 1, 1, 1, 0.27451 )
margin_left = 54.0
margin_top = 2.0
margin_right = 106.0
margin_bottom = 470.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indicator_rect_row" type="ColorRect" parent="ColorRect/board"]
modulate = Color( 1, 1, 1, 0.27451 )
margin_left = 2.0
margin_top = 54.0
margin_right = 470.0
margin_bottom = 106.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rect_highlight" type="ReferenceRect" parent="ColorRect/board"]
margin_left = 2.0
margin_top = 2.0
margin_right = 53.9996
margin_bottom = 54.0
border_color = Color( 0.101961, 0, 1, 1 )
border_width = 4.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="ColorRect/board"]
margin_left = 2.0
margin_top = 2.0
margin_right = 470.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Markup_button" type="Button" parent="ColorRect"]
margin_left = 809.0
margin_top = 112.0
margin_right = 1014.0
margin_bottom = 172.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Toggle Markup"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RIN_button" type="Button" parent="ColorRect"]
margin_left = 809.0
margin_top = 184.0
margin_right = 1010.0
margin_bottom = 244.0
focus_mode = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Toggle Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_Menu_button" type="Button" parent="ColorRect"]
margin_left = 10.0
margin_top = 10.0
margin_right = 185.0
margin_bottom = 80.0
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Check_Work_button" type="Button" parent="ColorRect"]
margin_left = 10.0
margin_top = 90.0
margin_right = 154.0
margin_bottom = 160.0
focus_mode = 0
custom_fonts/font = SubResource( 11 )
enabled_focus_mode = 0
text = "Check!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ColorRect"]
margin_left = 859.0
margin_top = 321.0
margin_right = 972.0
margin_bottom = 376.0
focus_mode = 0
custom_fonts/font = SubResource( 12 )
enabled_focus_mode = 0
text = "Undo"

[node name="Button2" type="Button" parent="ColorRect"]
margin_left = 859.0
margin_top = 393.0
margin_right = 972.0
margin_bottom = 452.0
focus_mode = 0
enabled_focus_mode = 0
text = "Redo"

[node name="puzzle_label" type="Label" parent="ColorRect"]
margin_left = 662.436
margin_top = 15.0
margin_right = 702.436
margin_bottom = 49.0
custom_fonts/font = SubResource( 13 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="diff_label" type="Label" parent="ColorRect"]
margin_left = 476.77
margin_top = 15.0
margin_right = 556.77
margin_bottom = 49.0
custom_fonts/font = SubResource( 13 )
text = "Medium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="ColorRect"]
margin_left = 278.442
margin_top = 15.0
margin_right = 466.442
margin_bottom = 49.0
custom_fonts/font = SubResource( 13 )
text = "Puzzle Difficulty:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="ColorRect"]
margin_left = 708.442
margin_top = 15.0
margin_right = 949.442
margin_bottom = 49.0
custom_fonts/font = SubResource( 13 )
text = "Previously Completed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="completed_label" type="Label" parent="ColorRect"]
margin_left = 958.0
margin_top = 15.0
margin_right = 996.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 13 )
text = "Yes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="check_status_label" type="Label" parent="ColorRect"]
margin_left = 23.6216
margin_top = 162.486
margin_right = 141.622
margin_bottom = 196.486
custom_fonts/font = SubResource( 13 )
text = "Incomplete"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="ColorRect"]
margin_left = 585.682
margin_top = 15.0
margin_right = 657.682
margin_bottom = 49.0
custom_fonts/font = SubResource( 13 )
text = "Puzzle:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ColorRect/Markup_button" to="." method="_on_Markup_button_pressed"]
[connection signal="pressed" from="ColorRect/RIN_button" to="." method="_on_RIN_button_pressed"]
[connection signal="pressed" from="ColorRect/Main_Menu_button" to="." method="_on_Main_Menu_button_pressed"]
[connection signal="pressed" from="ColorRect/Check_Work_button" to="." method="_on_Check_Work_button_pressed"]
